# odyssey-on-the-phone

./: README.md  check.sh  interact_longer_scenario.py  multiple_images_sequence.py  official_demo_replica.py  pyproject.toml  simulate_longer_scenario.py  test_cooldown.py
tests/: test_main.py
